iptables
# Generated by iptables-save v1.3.5 on Tue Oct 11 10:34:18 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [14296368:2255458918]
:RH-Firewall-1-INPUT - [0:0]

-A INPUT -s 116.226.194.225 -j DROP
-A INPUT -s 116.226.194.30 -j DROP
-A INPUT -s 116.226.199.190 -j DROP
-A INPUT -s 116.226.193.30 -j DROP
-A INPUT -s 103.77.56.185 -j DROP
-A INPUT -s 45.32.19.27 -j DROP
-A INPUT -s 103.77.56.186 -j DROP
-A INPUT -s 114.94.188.106 -j DROP
-A INPUT -s 61.155.166.77 -j DROP
-A INPUT -s 221.195.107.168 -j DROP
-A INPUT -s 101.30.98.195 -j DROP
-A INPUT -s 139.214.116.98 -j DROP
-A INPUT -s 111.76.31.177 -j DROP
-A INPUT -s 111.225.67.137 -j DROP
-A INPUT -s 120.239.191.45 -j DROP
-A INPUT -s 180.156.195.231 -j DROP
-A INPUT -s 121.25.137.68 -j DROP
-A INPUT -s 123.184.163.156 -j DROP
-A INPUT -s 60.222.125.193 -j DROP
-A INPUT -s 221.195.109.152 -j DROP
-A INPUT -s 118.180.245.187 -j DROP
-A INPUT -s 61.154.15.100 -j DROP
-A INPUT -s 122.96.31.2 -j DROP
-A INPUT -s 183.184.162.99 -j DROP
-A INPUT -s 125.36.51.239 -j DROP
-A INPUT -s 14.204.86.91 -j DROP
-A INPUT -s 123.118.184.145 -j DROP
-A INPUT -s 1.28.222.150 -j DROP
-A INPUT -s 115.214.112.214 -j DROP
-A INPUT -s 123.186.115.13 -j DROP
-A INPUT -s 112.28.133.107 -j DROP
-A INPUT -s 42.84.227.180 -j DROP
-A INPUT -s 122.194.88.13 -j DROP
-A INPUT -s 123.120.60.123 -j DROP
-A INPUT -s 42.89.92.48 -j DROP
-A INPUT -s 115.171.58.137 -j DROP
-A INPUT -s 121.224.214.197 -j DROP
-A INPUT -s 221.195.109.148 -j DROP
-A INPUT -s 103.77.56.173 -j DROP
-A INPUT -s 124.78.58.63 -j DROP
-A INPUT -s 111.201.96.255 -j DROP
-A INPUT -s 36.106.219.197 -j DROP
-A INPUT -s 36.149.111.162 -j DROP
-A INPUT -s 117.170.155.138 -j DROP
-A INPUT -s 112.80.77.90 -j DROP
-A INPUT -s 112.0.25.166 -j DROP
-A INPUT -s 42.80.195.34 -j DROP
-A INPUT -s 101.85.209.216 -j DROP
-A INPUT -s 112.65.62.162 -j DROP
-A INPUT -s 58.39.152.82 -j DROP
-A INPUT -s 183.228.104.18 -j DROP
-A INPUT -s 114.83.244.114 -j DROP
-A INPUT -s 183.228.124.3 -j DROP
-A INPUT -s 61.170.195.217 -j DROP
-A INPUT -s 103.77.56.184 -j DROP
-A INPUT -s 110.53.133.168 -j DROP
-A INPUT -s 113.137.173.255 -j DROP
-A INPUT -s 116.23.244.218 -j DROP
-A INPUT -s 117.80.30.37 -j DROP
-A INPUT -s 39.176.123.55 -j DROP
-A INPUT -s 223.72.82.184 -j DROP
-A INPUT -s 120.40.96.64 -j DROP
-A INPUT -s 222.137.41.3 -j DROP
-A INPUT -s 114.250.103.101 -j DROP
-A INPUT -s 223.74.200.171 -j DROP
-A INPUT -s 117.89.52.170 -j DROP
-A INPUT -s 183.28.252.206 -j DROP
-A INPUT -s 116.233.93.49 -j DROP
-A INPUT -s 36.250.86.195 -j DROP
-A INPUT -s 110.103.9.190 -j DROP
-A INPUT -s 122.97.216.108 -j DROP
-A INPUT -s 60.185.227.60 -j DROP
-A INPUT -s 113.109.81.135 -j DROP
-A INPUT -s 171.83.38.203 -j DROP
-A INPUT -s 121.193.141.21 -j DROP
-A INPUT -s 112.98.25.14 -j DROP
-A INPUT -s 222.64.233.226 -j DROP
-A INPUT -s 122.193.18.89 -j DROP
-A INPUT -s 36.5.102.106 -j DROP
-A INPUT -s 125.36.41.105 -j DROP
-A INPUT -s 36.16.128.182 -j DROP
-A INPUT -s 61.163.211.170 -j DROP
-A INPUT -s 119.86.38.145 -j DROP
-A INPUT -s 171.223.138.71 -j DROP
-A INPUT -s 116.233.15.136 -j DROP
-A INPUT -s 117.136.79.61 -j DROP
-A INPUT -s 124.77.162.19 -j DROP
-A INPUT -s 115.25.208.61 -j DROP
-A INPUT -s 183.0.111.51 -j DROP
-A INPUT -s 123.122.76.6 -j DROP
-A INPUT -s 171.80.96.238 -j DROP
-A INPUT -s 121.24.143.115 -j DROP
-A INPUT -s 58.35.199.85 -j DROP
-A INPUT -s 49.76.206.188 -j DROP
-A INPUT -s 116.238.9.195 -j DROP
-A INPUT -s 218.8.73.153 -j DROP
-A INPUT -s 106.118.160.233 -j DROP
-A INPUT -s 111.63.44.21 -j DROP
-A INPUT -s 60.220.128.209 -j DROP
-A INPUT -s 106.39.142.144 -j DROP
-A INPUT -s 182.149.203.220 -j DROP
-A INPUT -s 115.171.80.130 -j DROP
-A INPUT -s 123.182.26.56 -j DROP
-A INPUT -s 222.64.118.144 -j DROP
-A INPUT -s 180.174.59.83 -j DROP
-A INPUT -s 42.80.200.75 -j DROP
-A INPUT -s 222.33.6.239 -j DROP
-A INPUT -s 218.189.123.38 -j DROP
-A INPUT -s 119.53.32.42 -j DROP
-A INPUT -s 223.12.81.187 -j DROP
-A INPUT -s 221.195.107.165 -j DROP
-A INPUT -s 223.72.89.186 -j DROP
-A INPUT -s 58.38.244.57 -j DROP
-A INPUT -s 115.46.224.138 -j DROP
-A INPUT -s 122.192.8.3 -j DROP
-A INPUT -s 221.195.109.157 -j DROP
-A INPUT -s 180.110.247.172 -j DROP
-A INPUT -s 118.199.207.143 -j DROP
-A INPUT -s 183.198.197.0 -j DROP
-A INPUT -s 171.43.140.9 -j DROP
-A INPUT -s 183.3.151.184 -j DROP
-A INPUT -s 221.178.181.56 -j DROP
-A INPUT -s 117.9.79.114 -j DROP
-A INPUT -s 223.144.238.142 -j DROP
-A INPUT -s 121.22.248.62 -j DROP
-A INPUT -s 60.27.28.250 -j DROP
-A INPUT -s 223.20.128.8 -j DROP
-A INPUT -s 183.193.189.101 -j DROP
-A INPUT -s 183.190.47.1 -j DROP
-A INPUT -s 14.19.154.164 -j DROP
-A INPUT -s 39.64.222.11 -j DROP
-A INPUT -s 218.81.33.96 -j DROP
-A INPUT -s 218.81.180.129 -j DROP
-A INPUT -s 123.120.129.118 -j DROP
-A INPUT -s 183.246.152.80 -j DROP
-A INPUT -s 121.32.35.13 -j DROP
-A INPUT -s 180.174.18.70 -j DROP
-A INPUT -s 123.119.86.108 -j DROP
-A INPUT -s 117.136.67.45 -j DROP
-A INPUT -s 111.29.133.10 -j DROP
-A INPUT -s 183.193.41.168 -j DROP
-A INPUT -s 182.109.229.200 -j DROP
-A INPUT -s 117.28.150.144 -j DROP
-A INPUT -s 106.112.68.146 -j DROP
-A INPUT -s 111.14.131.185 -j DROP
-A INPUT -s 124.78.182.81 -j DROP
-A INPUT -s 117.10.36.199 -j DROP
-A INPUT -s 60.222.239.6 -j DROP

-A INPUT -p tcp -m tcp --dport 80 -m connlimit --connlimit-above 30 --connlimit-mask 32 -j REJECT --reject-with icmp-port-unreachable 

-A INPUT -j RH-Firewall-1-INPUT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A FORWARD -j RH-Firewall-1-INPUT 
-A OUTPUT -p tcp -m tcp --sport 80 -j ACCEPT 
-A RH-Firewall-1-INPUT -i lo -j ACCEPT 
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type any -j ACCEPT 
-A RH-Firewall-1-INPUT -p esp -j ACCEPT 
-A RH-Firewall-1-INPUT -p ah -j ACCEPT 
-A RH-Firewall-1-INPUT -d 224.0.0.251 -p udp -m udp --dport 5353 -j ACCEPT 
-A RH-Firewall-1-INPUT -p udp -m udp --dport 631 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 631 -j ACCEPT 
-A RH-Firewall-1-INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Tue Oct 11 10:34:18 2016
