iptables_backup20161117
# Generated by iptables-save v1.3.5 on Tue Oct 11 10:34:18 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [14296368:2255458918]
:RH-Firewall-1-INPUT - [0:0]

-A INPUT -s 223.87.29.12 -j DROP
-A INPUT -s 112.25.25.14 -j DROP
-A INPUT -s 120.221.0.35 -j DROP
-A INPUT -s 211.103.88.92 -j DROP
-A INPUT -s 111.11.227.75 -j DROP
-A INPUT -s 223.87.29.12 -j DROP
-A INPUT -s 111.13.111.231 -j DROP
-A INPUT -s 211.137.56.179 -j DROP
-A INPUT -s 119.135.187.130 -j DROP
-A INPUT -s 123.149.58.163 -j DROP
-A INPUT -s 123.113.159.221 -j DROP
-A INPUT -s 123.117.211.19 -j DROP
-A INPUT -s 182.116.57.70 -j DROP
-A INPUT -s 183.228.227.164 -j DROP
-A INPUT -s 183.208.28.112 -j DROP
-A INPUT -s 1.70.165.16 -j DROP
-A INPUT -s 112.25.25.14 -j DROP
-A INPUT -s 113.57.75.248 -j DROP
-A INPUT -s 120.221.0.35 -j DROP
-A INPUT -s 120.0.216.16 -j DROP
-A INPUT -s 120.192.95.151 -j DROP
-A INPUT -s 120.52.92.15 -j DROP
-A INPUT -s 110.254.32.200 -j DROP
-A INPUT -s 111.161.105.14 -j DROP
-A INPUT -s 111.161.52.28 -j DROP
-A INPUT -s 111.11.227.75 -j DROP
-A INPUT -s 123.126.126.125 -j DROP
-A INPUT -s 123.126.124.148 -j DROP
-A INPUT -s 122.228.227.66 -j DROP
-A INPUT -s 122.228.129.17 -j DROP
-A INPUT -s 121.17.129.140 -j DROP
-A INPUT -s 171.107.194.154 -j DROP
-A INPUT -s 112.39.34.77 -j DROP
-A INPUT -s 180.172.99.164 -j DROP
-A INPUT -s 27.154.61.226 -j DROP
-A INPUT -s 49.68.99.187 -j DROP
-A INPUT -s 58.35.3.169 -j DROP
-A INPUT -s 59.172.242.236 -j DROP
-A INPUT -s 59.45.77.49 -j DROP
-A INPUT -s 59.42.210.198 -j DROP
-A INPUT -s 220.115.241.20 -j DROP
-A INPUT -s 220.163.97.85 -j DROP
-A INPUT -s 180.77.102.191 -j DROP
-A INPUT -s 114.243.78.86 -j DROP
-A INPUT -s 218.23.114.5 -j DROP
-A INPUT -s 211.103.88.92 -j DROP
-A INPUT -s 211.137.56.179 -j DROP
-A INPUT -s 211.137.39.19 -j DROP
-A INPUT -s 221.193.61.240 -j DROP
-A INPUT -s 223.87.29.12 -j DROP
-A INPUT -s 223.104.8.73 -j DROP
-A INPUT -s 110.173.5.2 -j DROP
-A INPUT -s 140.207.54.187 -j DROP
-A INPUT -s 140.207.55.80 -j DROP
-A INPUT -s 60.212.34.248 -j DROP
-A INPUT -s 61.49.56.48 -j DROP
-A INPUT -s 61.49.57.55 -j DROP
-A INPUT -s 222.70.2.53 -j DROP
-A INPUT -s 113.141.28.62 -j DROP

-A INPUT -s 211.137.0.0/255.255.0.0 -j DROP
-A INPUT -s 211.103.88.0/255.255.255.0 -j DROP
#-A INPUT -s 125.39.0.0/255.255.0.0 -j DROP
-A INPUT -s 121.69.50.0/255.255.255.0 -j DROP
-A INPUT -s 140.207.0.0/255.255.0.0 -j DROP

-A INPUT -s 221.180.170.0/255.255.255.0 -j DROP 
-A INPUT -s 218.189.123.0/255.255.255.0 -j DROP 
-A INPUT -s 111.13.111.0/255.255.255.0 -j DROP 
-A INPUT -s 221.195.0.0/16 -j DROP 
-A INPUT -s 111.30.0.0/16 -j DROP 
-A INPUT -s 117.185.0.0/16 -j DROP 
-A INPUT -s 120.52.92.0/24 -j DROP 

-A INPUT -p tcp -m tcp --dport 80 -m connlimit --connlimit-above 30 --connlimit-mask 32 -j REJECT --reject-with icmp-port-unreachable 

-A INPUT -j RH-Firewall-1-INPUT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A FORWARD -j RH-Firewall-1-INPUT 
-A OUTPUT -p tcp -m tcp --sport 80 -j ACCEPT 
-A RH-Firewall-1-INPUT -i lo -j ACCEPT 
-A RH-Firewall-1-INPUT -p icmp -m icmp --icmp-type any -j ACCEPT 
-A RH-Firewall-1-INPUT -p esp -j ACCEPT 
-A RH-Firewall-1-INPUT -p ah -j ACCEPT 
-A RH-Firewall-1-INPUT -d 224.0.0.251 -p udp -m udp --dport 5353 -j ACCEPT 
-A RH-Firewall-1-INPUT -p udp -m udp --dport 631 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m tcp --dport 631 -j ACCEPT 
-A RH-Firewall-1-INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A RH-Firewall-1-INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A RH-Firewall-1-INPUT -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Tue Oct 11 10:34:18 2016
